# kube-demo

api/: Dockerfile  pyproject.toml
api/api/: endpoints.py  main.py
api/deploy/: values.yaml
api/deploy/templates/: deployment.yaml  hpa.yaml
frontend/: pyproject.toml
